<resources>
    <string name="app_name">Komyu-Sagip</string>

    <string name="forgot_pass"><u>Forgot Password?</u></string>
    <string name="welcome_text">Mabuhay!</string>
    <string name="signup_message">Want to contribute to the community and make your place safe?</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="or_text">OR</string>
    <string name="login_message">Already have an account?</string>
    <string name="signup">Signup</string>

    <string name="for_password"><u>Forget Password</u></string>
    <string name="password">Password:</string>
    <string name="email">Email:</string>
    <string name="entry_email">Enter your email address</string>
    <string name="entry_password">Enter your password</string>

    <string name="entry_firstName">Enter your first name</string>
    <string name="entry_lastName">Enter your last name</string>
    <string name="entry_phone">Enter your phone number</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="create_account">Create an Account</string>
    <string name="entry_username">Enter your username</string>
    <string name="search_location">Search your location…</string>
    <string name="username">Username:</string>
    <string name="location_selection">Select your location:</string>
    <string name="please_provide_the_following_information">Please provide the following information:</string>
    <string name="customize_your_profile">Customize your Profile</string>
    <string name="upload_your_profile_picture">Upload your profile picture:</string>
    <string name="entry_type_of_crime">Specify the type of crime...</string>
    <string name="entry_description">Add a description...</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="type_of_crime">Type of Crime:</string>
    <string name="date_of_incident">Date of Incident:</string>
    <string name="time_of_incident">Time of Incident:</string>
    <string name="description">Description:</string>
    <string name="test">test</string>
    <string-array name="typeOfCrime">
        <item></item>
        <item>Theft</item>
        <item>Rape</item>
        <item>Physical Injury</item>
        <item>Robbery</item>
        <item>Murder</item>
        <item>Carnapping</item>
        <item>Kidnapping</item>
        <item>Scam</item>
        <item>Gang Crime</item>
        <item>Child Abuse</item>
        <item>Others</item>
    </string-array>

    <string name="editProfile">Edit Profile</string>
    <string name="editPhoto"><u>Edit Photo</u></string>
    <string name="entry_updatedFirstName">"Enter your updated your first name..."</string>
    <string name="entry_updatedLastName">"Enter your updated your last name..."</string>
    <string name="entry_updatedUsername">"Enter your updated your username..."</string>
    <string name="location">"Location:"</string>
    <string name="entry_updatedLocation">"Enter your updated location..."</string>
    <string name="save">"Save"</string>

    <string name="profile">"Profile"</string>
    <string name="profileName">"Name"</string>
    <string name="profileUsername">"@username"</string>
    <string name="profileLocation">"Location"</string>
    <string name="switchNotification">"Notification"</string>
    <string name="switchLocation">"Location"</string>
    <string name="switchSOS">"Shake to send SOS"</string>
    <string name="profileVerify">"Verify Account"</string>
    <string name="profileSignout">"Sign out"</string>

    <string name="emergency">"Emergency"</string>
    <string name="emergency_contacts">"Emergency Contacts"</string>
    <string name="emergency_hotlines">"Emergency Hotlines"</string>
    <string name="sos">"SOS"</string>

    <string name="whatsHappening">"What's Happening?"</string>
    <string name="mostRecent">"Most Recent"</string>
    <string name="inYourArea">"In Your Area"</string>
    <string name="communityWatch">"Community Watch"</string>
    <string name="coordinates">try</string>

    <string name="like">"Like"</string>
    <string name="comment">"Comment"</string>
    <string name="incident_details">The incident occurred at %1$s on %2$s at %3$s.</string>


</resources>