<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/welcome_background"
    tools:context=".MainActivity">
    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/welcome_text"
        android:textColor="@color/white"
        android:textSize="48sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.101"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.035" />
    <ImageView
        android:id="@+id/logo_display"
        android:layout_width="255dp"
        android:layout_height="230dp"
        android:src="@drawable/logo_icon_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111"
        tools:ignore="contentDescription" />

    <TextView
        android:id="@+id/sign_up_text"
        android:layout_width="311dp"
        android:layout_height="36dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/signup_message"
        android:textColor="@color/primary_white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.534"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393" />

    <Button
        android:id="@+id/button_click"
        android:layout_width="311dp"
        android:layout_height="58dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="14dp"
        android:backgroundTint="@color/primary_red"
        android:fontFamily="@font/inter_bold"
        android:text="@string/sign_up"
        android:textColor="@color/primary_white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.462"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sign_up_text" />

    <TextView
        android:id="@+id/or_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/inter_extrabold"
        android:text="@string/or_text"
        android:textColor="@color/primary_white"
        android:textColorHighlight="#673AB7"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/sign_up_text"
        app:layout_constraintVertical_bias="0.36" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="311dp"
        android:layout_height="36dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="14dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/login_message"
        android:textColor="@color/primary_white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.638"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.725" />

    <Button
        android:id="@+id/login_click"
        android:layout_width="311dp"
        android:layout_height="58dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="14dp"
        android:backgroundTint="@color/primary_red"
        android:fontFamily="@font/inter_bold"
        android:text="@string/login"
        android:textColor="@color/primary_white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_text" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:text="@string/forgot_pass"
        android:textAlignment="center"
        android:textColor="@color/secondary_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />
</androidx.constraintlayout.widget.ConstraintLayout>

