<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfile"
    android:background="@color/primary_blue">

    <LinearLayout
        android:id="@+id/linearLayoutProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backToProfile"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/transparent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/back_button"
            tools:layout_editor_absoluteX="17dp" />

        <TextView
            android:id="@+id/editProfile"
            android:layout_width="177dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/editProfile"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/back"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/uploadImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutProfile"
        android:src="@drawable/image_upload" />

    <TextView
        android:id="@+id/editPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:text="@string/editPhoto"
        android:textAlignment="center"
        android:textAppearance="@style/Widget.AppCompat.Spinner.Underlined"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uploadImage" />

    <TextView
        android:id="@+id/editPersonalInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="Edit Personal Information"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.112"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPhoto" />

    <LinearLayout
        android:id="@+id/linearLayoutUsername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutLastName">

        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent" />
        
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/entry_username"
            android:layout_width="354dp"
            android:layout_height="39dp"
            android:backgroundTint="@color/secondary_red"
            android:backgroundTintMode="add"
            android:ems="10"
            android:hint="@string/entry_updatedUsername"
            android:inputType="textEmailAddress"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/email"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/email"
            tools:layout_editor_absoluteY="421dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutFirstName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editPersonalInfo">

        <TextView
            android:id="@+id/first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/entry_first_name"
            android:layout_width="355dp"
            android:layout_height="41dp"
            android:backgroundTint="@color/secondary_red"
            android:backgroundTintMode="add"
            android:ems="10"
            android:hint="@string/entry_updatedFirstName"
            android:inputType="textEmailAddress"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/view2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view1"
            app:layout_constraintVertical_bias="0.0" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutLastName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutFirstName">

        <TextView
            android:id="@+id/last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            android:textColor="@color/white"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/entry_last_name"
            android:layout_width="354dp"
            android:layout_height="39dp"
            android:backgroundTint="@color/secondary_red"
            android:backgroundTintMode="add"
            android:ems="10"
            android:hint="@string/entry_updatedLastName"
            android:inputType="textEmailAddress"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="@+id/email"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/email"
            tools:layout_editor_absoluteY="421dp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayoutLaocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="28dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutUsername">

        <TextView
            android:id="@+id/location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/location"
            android:textColor="@color/white" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/entry_location"
            android:layout_width="354dp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/secondary_red"
            android:backgroundTintMode="add"
            android:ems="10"
            android:hint="@string/entry_updatedLocation"
            android:inputType="textEmailAddress"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textColorHint="@color/hint_color"
            android:textSize="14sp" />

    </LinearLayout>

    <Button
        android:id="@+id/profileSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/primary_red"
        android:paddingHorizontal="80dp"
        android:text="@string/save"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayoutLaocation"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>